--- a/preghiere.html
+++ b/preghiere.html
@@ -2,123 +2,119 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Preghiere Mattino - Tempo Ordinario</title>
+  <title>Preghiere del Mattino - Tempo Ordinario</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Georgia, serif; line-height: 1.6; max-width: 800px; margin: auto; padding: 2rem; background: #fdfcf7; }
-    h1, h2, h3, h4 { text-align: center; }
-    .preghiera, .canone, .lettura { margin-bottom: 2rem; padding: 1rem; border-left: 4px solid #666; background: #fff; }
+    body {
+      font-family: "Georgia", serif;
+      line-height: 1.6;
+      margin: 20px;
+      background: #f8f8f8;
+      color: #222;
+    }
+    h1, h2 {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .block {
+      background: #fff;
+      padding: 15px;
+      margin: 15px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .canone {
+      font-weight: bold;
+      color: #003366;
+      margin-bottom: 10px;
+    }
+    .letture {
+      margin-top: 30px;
+    }
+    .loading {
+      color: gray;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
-  <h1>Preghiere Mattino - Tempo Ordinario</h1>
+  <h1>Preghiere del Mattino</h1>
+  <h2>Tempo Ordinario</h2>
 
-  <div id="preghiere">
-    <!-- Preghiere e Canoni Mattino -->
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Adoramus Te Domine</p>
-      <p>Oh ... oh ... oh ... Adoramus Te Domine</p>
-      <p>Oh ... oh ... oh ... Adoramus Te Domine</p>
-      <p><strong>Segno di croce</strong><br>Nel nome del Padre e del Figlio e dello Spirito Santo. Amen.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Ubi Caritas</p>
-      <p>Ubi caritas et amor, ubi caritas, Deus ibi est!!</p>
-      <p>Ubi caritas et amor, ubi caritas, Deus ibi est!!</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Preghiera</h3>
-      <p><strong>Offerta della Giornata al Sacro Cuore di Gesù</strong><br>
-      Cuore Divino di Gesù io ti offro per mezzo del Cuore Immacolato di Maria madre della Chiesa, in unione al Sacrificio Eucaristico, le preghiere, le azioni, le gioie e le sofferenze di questo giorno in riparazione dei peccati e per la salvezza di tutti gli uomini, nella grazia dello Spirito Santo, a gloria del Divin Padre. Amen.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Il Signore è la mia forza</p>
-      <p>Il Signore è la mia forza e io spero in Lui.<br>
-         Il signore è il salvatore. In lui confido, non ho timor. In lui confido non ho timor.</p>
-      <p>Il Signore è la mia forza e io spero in Lui.<br>
-         Il signore è il salvatore. In lui confido, non ho timor. In lui confido non ho timor.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Preghiera</h3>
-      <p>Ti adoro, mio Dio, e ti amo con tutto il cuore. Ti ringrazio di avermi creato, fatto cristiano e conservato in questa notte. Ti offro le azioni della giornata, fa’ che siano tutte secondo la tua santa volontà per la maggior tua gloria. Preservami dal peccato e da ogni male. La tua grazia sia sempre con me e con tutti i miei cari. Amen.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Confitemini Domino</p>
-      <p>Confitemini Domino, quoniam bonus<br>Confitemini Domino Alleluia</p>
-      <p>Confitemini Domino, quoniam bonus<br>Confitemini Domino Alleluia</p>
-      <p><strong>Gloria al Padre</strong><br>Gloria al Padre, al Figlio e allo Spirito Santo. Come era nel principio, ora e sempre, nei secoli dei secoli. Amen.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Laudates Omnes Gentes</p>
-      <p>Laudate Omnes Gentes, laudate Dominum</p>
-      <p>Laudate Omnes Gentes, laudate Dominum</p>
-      <p><strong>Magnificat</strong><br>
-      L'anima mia magnifica il Signore e il mio spirito esulta in Dio salvatore, perché ha guardato l'umiltà della sua serva. D'ora in poi tutte le generazioni mi chiameranno beata. Grandi cose ha fatto in me l'Onnipotente e Santo è il suo nome: di generazione in generazione la sua misericordia si stende su quelli che lo temono. Ha spiegato la potenza del suo braccio, ha disperso i superbi nei pensieri del loro cuore; ha rovesciato i potenti dai troni e ha innalzato gli umili; ha ricolmato di beni gli affamati e ha rimandato i ricchi a mani vuote. Ha soccorso Israele suo servo ricordandosi della sua misericordia come aveva promesso ai nostri Padri ad Abramo e alla sua discendenza per sempre. Gloria al Padre e al Figlio e allo Spirito Santo, come era nel principio, ora e sempre nei secoli dei secoli. Amen.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Misericordias Domini</p>
-      <p>Misericordias Domini in aeternum cantabo!<br>Misericordias Domini in aeternum cantabo!</p>
-      <p><strong>Atto di dolore</strong><br>
-      Mio Dio, mi pento e mi dolgo con tutto il cuore dei miei peccati, perché peccando ho meritato i tuoi castighi e molto più perché ho offeso te, infinitamente buono e degno di essere amato sopra ogni cosa. Propongo con il tuo santo aiuto di non offenderti mai più e di fuggire le occasioni prossime di peccato. Signore, misericordia, perdonami.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Misericordias Domini</p>
-      <p>Misericordias Domini in aeternum cantabo!<br>Misericordias Domini in aeternum cantabo!</p>
-      <p><strong>Gesù mio</strong><br>
-      Gesù mio, perdona le nostre colpe, preservaci dal fuoco dell’inferno e porta in cielo tutte le anime, specialmente le più bisognose della tua misericordia.</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Laudates Omnes Gentes</p>
-      <p>Laudate Omnes Gentes, laudate Dominum</p>
-      <p><strong>Credo Niceo-Costantinopolitano</strong><br>
-      [Testo completo del Credo]</p>
-    </div>
-
-    <div class="preghiera">
-      <h3>Canone</h3>
-      <p>Il Signore è la mia forza</p>
-      <p>Il Signore è la mia forza e io spero in Lui. Il signore è il salvatore. In lui confido, non ho timor. In lui confido non ho timor.</p>
-      <p>Il Signore è la mia forza e io spero in Lui. Il signore è il salvatore. In lui confido, non ho timor. In lui confido non ho timor.</p>
-      <p><strong>Padre Nostro</strong><br>
-      Padre nostro che sei nei cieli, sia santificato il Tuo nome... Amen.</p>
-    </div>
-
-    <!-- Continua inserendo tutte le altre preghiere e canoni del Mattino esattamente come mi hai fornito -->
+  <!-- Preghiere e Canoni -->
+  <div class="block">
+    <div class="canone">Canone - Adoramus Te Domine</div>
+    <p>Oh ... oh ... oh ... Adoramus Te Domine<br>Oh ... oh ... oh ... Adoramus Te Domine</p>
   </div>
 
-  <!-- Canone "Restate qui" -->
-  <div class="canone">
-    <h3>Canone</h3>
-    <h4>Restate qui</h4>
-    <p>Restate qui e vegliate con me,<br>vegliate e pregate, vegliate e pregate</p>
-    <p>Restate qui e vegliate con me,<br>vegliate e pregate, vegliate e pregate</p>
+  <div class="block">
+    <p><strong>Segno di croce</strong><br>
+    Nel nome del Padre e del Figlio e dello Spirito Santo. Amen.</p>
+  </div>
+
+  <div class="block">
+    <div class="canone">Canone - Ubi Caritas</div>
+    <p>Ubi caritas et amor, ubi caritas, Deus ibi est!!</p>
+  </div>
+
+  <div class="block">
+    <p><strong>Offerta della Giornata</strong><br>
+    Cuore Divino di Gesù io ti offro per mezzo del Cuore Immacolato di Maria... Amen.</p>
+  </div>
+
+  <!-- (👉 Qui continueresti a incollare tutti i blocchi che mi hai dato, alternando Canone / Preghiera) -->
+
+  <!-- Canone prima delle letture -->
+  <div class="block">
+    <div class="canone">Canone - Restate qui</div>
+    <p>Restate qui e vegliate con me,<br>vegliate e pregate, vegliate e pregate...</p>
   </div>
 
   <!-- Letture del giorno -->
-  <div id="letture" class="lettura">
-    <h2>Letture del giorno</h2>
+  <h2>Letture del giorno</h2>
+  <div id="letture" class="block letture">
+    <p class="loading">Caricamento delle letture...</p>
+  </div>
 
-    <h3>Prima Lettura</h3>
-    <p id="prima-lettura">Caricamento...</p>
+  <!-- Canone dopo il Vangelo -->
+  <div id="canone-dopo-vangelo" class="block" style="display:none;">
+    <div class="canone">Canone - Il Signore è la mia forza</div>
+    <p>Il Signore è la mia forza e io spero in Lui...<br>
+    In lui confido non ho timor.</p>
+  </div>
 
-    <h3>Salmo Responsoriale</h3>
-    <p id="salmo">Caricamento...</p>
+  <script>
+    async function caricaLetture() {
+      try {
+        // Esempio: API CEI liturgia (letture del giorno)
+        const risposta = await fetch("https://liturgia.udienza.net/api/letture"); 
+        const dati = await risposta.json();
 
-    <h3>Seconda Lettura</h3>
-    <p id="seconda-lettura">Caricamento...</p>
+        let html = "";
+        if (dati.lectio) {
+          html += `<h3>Prima lettura</h3><p>${dati.lectio}</p>`;
+        }
+        if (dati.psalmo) {
+          html += `<h3>Salmo</h3><p>${dati.psalmo}</p>`;
+        }
+        if (dati.seconda) {
+          html += `<h3>Seconda lettura</h3><p>${dati.seconda}</p>`;
+        }
+        if (dati.vangelo) {
+          html += `<h3>Vangelo</h3><p>${dati.vangelo}</p>`;
+        }
+
+        document.getElementById("letture").innerHTML = html;
+
+        // mostra il canone dopo il Vangelo
+        document.getElementById("canone-dopo-vangelo").style.display = "block";
+      } catch (e) {
+        document.getElementById("letture").innerHTML =
+          "<p>Impossibile caricare le letture. Controlla la connessione.</p>";
+      }
+    }
+
+    caricaLetture();
+  </script>
+</body>
+</html>
